--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,50 @@
 	<artifactId>orbits</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Orbits</name>
-	<description>Orbit Simulator</description>
+	<name>NBody3D</name>
+	<description>N-Body 3D Orbit Simulator</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<organization>The Pond</organization>
+		<fullName>Ian Smith</fullName>
+		<email>m4r35n357@gmail.com</email>
+		<repoManager>http://sumo:8080/nexus/content/repositories</repoManager>
+		<javaVersion>1.6</javaVersion>
+		<surefireVersion>2.7.1</surefireVersion>
+	</properties>
+	
+	<distributionManagement>
+		<repository>
+			<id>nexus.releases</id>
+			<name>Nexus Releases</name>
+			<url>${repoManager}/releases/</url>
+			<layout>default</layout>
+		</repository>
+
+		<snapshotRepository>
+			<id>nexus.snapshots</id>
+			<name>Nexus Snapshots</name>
+			<url>${repoManager}/snapshots/</url>
+			<layout>default</layout>
+		</snapshotRepository>
+		
+		<site>
+			<id>site</id>
+			<url>file:///net/nas/Public/${name}/</url>
+		</site>
+	</distributionManagement>
+
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://sumo:8080/jenkins/job/${name}/</url>
+	</ciManagement>
+
+	<scm>
+		<connection>scm:git:/net/nas/Public/Freecom400GB/GitRepos/NBody3D.git</connection>
+		<developerConnection>scm:git:/net/nas/Public/Freecom400GB/GitRepos/NBody3D.git</developerConnection>
+	</scm>
+
 	<build>
 		<plugins>
 			<plugin>
