--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
 		<surefireVersion>2.7.1</surefireVersion>
 	</properties>
 	
+	<organization>
+		<name>${organization}</name>
+		<url>${project.url}</url>
+	</organization>
+
+	<developers>
+		<developer>
+			<id>ian</id>
+			<name>${fullName}</name>
+			<email>${email}</email>
+			<organization>${organization}</organization>
+		</developer>
+	</developers>
+
 	<distributionManagement>
 		<repository>
 			<id>nexus.releases</id>
@@ -77,4 +91,60 @@
 		</plugins>
 	</build>
 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<threshold>Low</threshold>
+					<effort>Max</effort>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>${surefireVersion}</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report-only</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+
+<!--			<plugin>-->
+<!--				<groupId>org.codehaus.mojo</groupId>-->
+<!--				<artifactId>cobertura-maven-plugin</artifactId>-->
+<!--				<version>2.4</version>-->
+<!--			</plugin>-->
+
+			<plugin>
+			  <groupId>org.sonatype.maven.plugin</groupId>
+			  <artifactId>emma-maven-plugin</artifactId>
+			  <version>1.2</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
